#    This file is part of depi.
#
#    depi is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    depi is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with depi.  If not, see <https://www.gnu.org/licenses/>.
cargo-features = ["strip"]
[package]
name = "depi"
version = "0.1.0"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
edition = "2021"
resolver = "2"
license = "AGPL-3.0-or-later"
description = "Command-line tool for viewing images."
repository = "https://github.com/Dirout/depi"
homepage = "https://github.com/Dirout/depi"
readme = "README"
include = [
    "**/*.rs",
    "Cargo.toml",
    "COPYING",
    "LICENSE.md",
    "NOTICE",
    "rust-toolchain",
    "rustfmt.toml",
    ".cargo/*",
]

[lib]
name = "depi"
path = "src/lib.rs"
crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "depi"
path = "src/main.rs"
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argfile = "0.1.5"
arti-client = { version = "0.6.0", features = ["static"] }
arti-hyper = "0.6.0"
async_ftp = { version = "6.0.0", features = ["secure"] }
cfg-if = "1.0.0"
clap = { version = "3.2.23", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
futures = "0.3.25"
hyper = "0.14.23"
image = { version = "0.24.5", default-features = true }
ipfs-api-backend-hyper = { version = "0.5.0", features = ["with-hyper-tls"] }
lazy_static = "1.4.0"
mimalloc = { version = "0.1.32", default-features = false }
url = "2.3.1"
urlencoding = "2.1.2"
reqwest = { version = "0.11.13", features = ["stream"] }
tls-api = { version = "0.9.0", features = ["runtime-tokio"] }
tls-api-native-tls = { version = "0.9.0", features = ["runtime-tokio"] }
tokio = { version = "1.24.1", features = ["full"] }
tokio-stream = "0.1.11"
viuer = "0.6.2"
wild = "2.1.0"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
rpath = false
panic = 'abort'
strip = true

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[features]
sixel = ["viuer/sixel"]
avif = ["image/avif-encoder", "image/avif-decoder"]

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/depi", "usr/bin/", "755"],
    ["target/x86_64-unknown-linux-gnu/release/libdepi.so", "usr/lib/", "644"],
    ["README", "usr/share/doc/depi/README", "644"],
    ["COPYING", "usr/share/doc/depi/COPYING", "644"],
]

[package.metadata.rpm]
package = "depi"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
depi = { path = "/usr/bin/depi" }
