[package]
name = "depi"
version = "0.2.0"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
edition = "2021"
resolver = "2"
license = "AGPL-3.0-or-later"
description = "Command-line tool for viewing images."
repository = "https://github.com/Dirout/depi"
homepage = "https://github.com/Dirout/depi"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "COPYING",
    "LICENSE.md",
    "NOTICE",
    "rust-toolchain",
    "rustfmt.toml",
    ".cargo/*",
]

[lib]
name = "depi"
path = "src/lib.rs"
crate-type=["rlib", "cdylib", "staticlib"]

[[bin]]
name = "depi"
path = "src/main.rs"
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
argfile = "0.1.6"
arti-client = { version = "0.8.3", features = ["static"] }
arti-hyper = "0.8.3"
async_ftp = { version = "6.0.0", features = ["secure"] }
cfg-if = "1.0.0"
clap = { version = "4.5.4", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
futures = "0.3.30"
hyper = "0.14.28"
image = { version = "0.25.0", default-features = true }
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-hyper-tls"] }
lazy_static = "1.4.0"
mimalloc = { version = "0.1.39", default-features = false }
url = "2.5.0"
urlencoding = "2.1.3"
reqwest = { version = "0.11.27", features = ["stream"] }
tls-api = { version = "0.9.0", features = ["runtime-tokio"] }
tls-api-native-tls = { version = "0.9.0", features = ["runtime-tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
viuer = "0.6.2"
wild = "2.2.1"

[features]
sixel = ["viuer/sixel"]
avif = ["image/avif-encoder", "image/avif-decoder"]

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/depi", "usr/bin/", "755"],
    ["target/x86_64-unknown-linux-gnu/release/libdepi.so", "usr/lib/", "644"],
    ["README.md", "usr/share/doc/depi/README.md", "644"],
    ["COPYING", "usr/share/doc/depi/COPYING", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/depi", dest = "/usr/bin/depi", mode = "755" },
  { source = "target/release/libdepi.so", dest = "/usr/lib/libdepi.so", mode = "755" },
  { source = "target/release/libdepi.a", dest = "/usr/lib/libdepi.a", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/depi/README.md", mode = "644" },
  { source = "COPYING", dest = "/usr/share/doc/depi/COPYING", mode = "644" },
]
